[project]
name = "darkweb-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8",
    "httpx[socks]>=0.28.1",
    "nltk>=3.9.1",
    "rich>=14.0.0",
    "ruff>=0.11.5",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
]
